<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_top_tv"
      android:text="@string/login"
      android:textSize="@dimen/text_size_tv"
      android:textStyle="bold"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_top_btn"
      android:text="@string/login"
      android:gravity="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

  <EditText
      android:id="@+id/etLoginEmail"
      android:layout_width="@dimen/width_et"
      android:layout_height="@dimen/height_et"
      android:layout_marginTop="@dimen/margin_top_et"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:layout_marginStart="@dimen/margin_start_et"
      android:layout_marginEnd="@dimen/margin_end_et"
      android:hint="@string/email"
      android:ems="10"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
       />

  <EditText
      android:id="@+id/etLoginPassword"
      android:layout_width="@dimen/width_et"
      android:layout_height="@dimen/height_et"
      android:layout_marginTop="@dimen/margin_top_et"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:layout_marginStart="@dimen/margin_start_et"
      android:layout_marginEnd="@dimen/margin_end_et"
      android:hint="@string/password"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />

  <TextView
      android:id="@+id/tvRegister"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/register"
      android:layout_marginTop="@dimen/margin_top_tv"
      android:gravity="center"
      android:textStyle="bold"
      android:textSize="@dimen/text_size2_tv"
      android:textColor="@color/blue_700"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>