<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/edit_quote"
        android:gravity="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSaveChanges"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_btn"
        android:layout_marginEnd="80dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditTime" />

    <Button
        android:id="@+id/btnCancelEdition"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="@dimen/margin_top_btn"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveChanges"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditTime" />

    <EditText
        android:id="@+id/etEditDate"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/margin_top_et"
        android:enabled="false"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditActivity" />

    <EditText
        android:id="@+id/etEditTime"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:enabled="false"
        android:layout_marginStart="30dp"
        android:layout_marginTop="@dimen/margin_top_et"
        android:ems="10"
        android:inputType="time"
        android:hint="@string/hour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditDate" />

    <Spinner
        android:id="@+id/spinnerEditActivity"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="@dimen/margin_top_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/ibEditDate"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toEndOf="@+id/etEditDate"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditActivity"
        app:srcCompat="@mipmap/calendar" />

    <ImageButton
        android:id="@+id/ibEditTime"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:srcCompat="@mipmap/clock"
        app:layout_constraintStart_toEndOf="@+id/etEditTime"
        app:layout_constraintTop_toBottomOf="@+id/etEditDate" />

</androidx.constraintlayout.widget.ConstraintLayout>