<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/carView"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    cardView:cardCornerRadius="10dp"
    cardView:cardElevation="10dp"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView android:id="@+id/ivIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_event"
            android:tag="image_tag"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintStart_toStartOf="parent"
            cardView:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/category"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textStyle="bold"
            cardView:layout_constraintStart_toEndOf="@+id/ivIcon"
            cardView:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintStart_toEndOf="@+id/ivIcon"
            cardView:layout_constraintTop_toBottomOf="@+id/txtViewCategory" />

        <TextView
            android:id="@+id/txtViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/hour"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black"
            android:textStyle="italic"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintStart_toEndOf="@+id/txtViewDate"
            cardView:layout_constraintTop_toBottomOf="@+id/txtViewCategory" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_baseline_favorite_border"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintEnd_toStartOf="@+id/ivEdit"
            cardView:layout_constraintTop_toTopOf="parent"
            cardView:layout_constraintVertical_bias="0.466" />

        <ImageView
            android:id="@+id/ivEdit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_horizontal"
            cardView:layout_constraintBottom_toBottomOf="parent"
            cardView:layout_constraintEnd_toEndOf="parent"
            cardView:layout_constraintTop_toTopOf="parent"
            cardView:srcCompat="@drawable/ic_baseline_edit_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>